# yggdrasill

./: .gitignore  Dockerfile  README.md  discord.opam  dune-project  elasticmq.opam  flake.nix  minio.opam  nidhoggr.opam  ratatoskr.opam  yggdrasill.opam  yggdrasill.opam.template
.github/workflows/: docker-image.yml
lib/discord/: discord.ml  dune
lib/minio/: dune
nidhoggr/: dune
ratatoskr/: command.ml  commands.json  config.ml  discord.ml  dune  ratatoskr.ml  register.sh
